fix: 回溯收尾